--- a/src/app/home-component/home-component.component.html
+++ b/src/app/home-component/home-component.component.html
@@ -3,5 +3,5 @@
     <h1>Where in the world ?</h1>
     <button class="btn-dark-mode">Dark Mode</button>
   </div>
-  <app-home-page-body></app-home-page-body>
+  <router-outlet></router-outlet>
 </div>
