--- a/src/app/coutry-individual-component/coutry-individual-component.component.css
+++ b/src/app/coutry-individual-component/coutry-individual-component.component.css
@@ -17,7 +17,8 @@
   outline: none !important;
 }
 
-.back-button:hover {
+.back-button:hover,
+.countries:hover {
   background-color: hsl(209, 23%, 30%);
 }
 
@@ -78,4 +79,5 @@
   color: hsl(209, 23%, 80%);
   padding: 0em 1.5em;
   flex-wrap: wrap;
+  outline: none !important;
 }
