--- a/src/app/home-component/home-component.component.html
+++ b/src/app/home-component/home-component.component.html
@@ -1,6 +1,6 @@
 <div class="home-page">
   <div class="home-header-bar">
-    <h1>Where in the world ?</h1>
+    <h1 style="outline: 'none !important';" routerLink="/">Where in the world ?</h1>
     <button class="btn-dark-mode">Dark Mode</button>
   </div>
   <router-outlet></router-outlet>
