--- a/src/app/home-page-body/home-page-body.component.css
+++ b/src/app/home-page-body/home-page-body.component.css
@@ -42,6 +42,7 @@ select {
   background-color: hsl(209, 23%, 22%);
   margin-bottom: 5em;
   border-radius: 0.5em;
+  outline: none !important;
   margin-left: 7em;
 }
 
