--- a/src/app/home-page-body/home-page-body.component.html
+++ b/src/app/home-page-body/home-page-body.component.html
@@ -16,11 +16,12 @@
 </div>
 
 <div class="country-list-view">
-  <div class="card" style="width : 220px;" *ngFor="let Country of allCountryDetails | filter : searchText ">
+  <div routerLink="country/{{Country.alpha3Code}}" class="card" style="width : 220px;"
+    *ngFor="let Country of allCountryDetails | filter : searchText ">
     <img class="card-img" style="width : 220px; height : 146px; border-radius: 0.2em;" src={{Country.flag}}
       alt="Country Flag" />
     <div class="card-body">
-      <a routerLink="country/{{Country.name}}" class="card-title">{{Country.name}}</a>
+      <a class="card-title">{{Country.name}}</a>
       <p class="population">Population : {{Country.population}} </p>
       <p class="region"> Region : {{Country.region}}</p>
       <p class="capital"> Capital : {{Country.capital}}</p>
