--- a/src/styles.css
+++ b/src/styles.css
@@ -3,3 +3,11 @@ body {
   margin: 0;
   padding: 0;
 }
+
+/* @font-face {
+  font-family: "CustomFont";
+  src: url("https://yoursite.com/css/fonts/CustomFont.eot");
+  src: url("https://yoursite.com/css/fonts/CustomFont.woff") format("woff"),
+    url("https://yoursite.com/css/fonts/CustomFont.otf") format("opentype"),
+    url("https://yoursite.com/css/fonts/CustomFont.svg#filename") format("svg");
+} */
