--- a/src/app/home-component/home-component.component.css
+++ b/src/app/home-component/home-component.component.css
@@ -4,7 +4,7 @@
   width: 100%;
   height: 100%;
   padding-bottom: 26.5em;
-  background-color: hsl(207, 26%, 17%);
+  background-color: var(--background-color);
 }
 
 .home-header-bar {
@@ -12,12 +12,17 @@
   /* width: 100%; */
   justify-content: space-between;
   padding: 1.5em 7em;
-  background-color: hsl(209, 23%, 22%);
-  color: white;
+  background-color: var(--background-color-lighter);
+  color: var(--font-color);
 }
 
 .btn-dark-mode {
   background: transparent;
   border: none;
-  color: white;
+  outline: none !important;
+  color: var(--font-color);
+}
+
+.btn-dark-mode:active {
+  background-color: var(--dark-mode-btn-color)
 }
