--- a/src/app/coutry-individual-component/coutry-individual-component.component.css
+++ b/src/app/coutry-individual-component/coutry-individual-component.component.css
@@ -3,9 +3,20 @@
   flex-direction: column;
   justify-content: space-around;
   padding: 1.5em 7em;
-  height: 40em;
+  height: 45em;
   color: var(--font-color);
   font-family: 'CustomFont';
+  flex-wrap: wrap;
+}
+
+.card-img {
+  width: 48em;
+  height: 30em;
+  border-radius: 0.2em;
+}
+
+h4 {
+  font-size: 2.5em;
 }
 
 .back-button {
@@ -81,4 +92,59 @@
   padding: 0em 1.5em;
   flex-wrap: wrap;
   outline: none !important;
+}
+
+@media only screen and (max-width: 375px) {
+  .card-img {
+    width: 100%;
+    height: 15em;
+  }
+
+  .country-body {
+    padding: 1em 1em;
+    height: 65em;
+    /* flex-direction: column; */
+  }
+
+  h4 {
+    font-size: 1.7em;
+  }
+
+  .country-details {
+    flex-direction: column;
+  }
+
+  .detail {
+    font-size: 1.1em;
+  }
+
+  .basic-details {
+    flex-direction: column;
+    height: 20em;
+  }
+
+  .first-column,
+  .second-column {
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+  }
+
+  .country-document {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+  }
+
+  .back-button {
+    width: 20%;
+  }
+
+  /* .border-countries {
+    flex-direction: column;
+  } */
+  .border-country {
+    font-size: 1.5em;
+    width: 100%;
+  }
 }
