--- a/src/app/home-component/home-component.component.css
+++ b/src/app/home-component/home-component.component.css
@@ -1,7 +1,7 @@
 .home-page {
   display: flex;
   flex-direction: column;
-  width: 100%;
+  max-width: 100%;
   height: 100%;
   padding-bottom: 26.5em;
   background-color: var(--background-color);
@@ -9,7 +9,7 @@
 
 .home-header-bar {
   display: flex;
-  /* width: 100%; */
+  max-width: 100%;
   justify-content: space-between;
   padding: 1.5em 7em;
   background-color: var(--background-color-lighter);
@@ -25,4 +25,18 @@
 
 .btn-dark-mode:active {
   background-color: var(--dark-mode-btn-color)
+}
+
+@media only screen and (max-width: 375px) {
+  .home-header-bar {
+    padding: 1em 1em;
+  }
+
+  h1 {
+    font-size: 1.2em;
+  }
+
+  .btn-dark-mode {
+    font-size: 0.7em;
+  }
 }
