--- a/src/app/coutry-individual-component/coutry-individual-component.component.css
+++ b/src/app/coutry-individual-component/coutry-individual-component.component.css
@@ -67,7 +67,7 @@ h4 {
 
 }
 
-.xx {
+.detail-depth {
   margin: 0;
   font-size: 1em;
   margin-left: 0.5em;
@@ -78,6 +78,10 @@ h4 {
   display: flex;
   flex-wrap: wrap;
   /* margin-top: 2em; */
+}
+
+.border-country {
+  font-size: 1em;
 }
 
 .countries {
