New Branch created

--- a/src/app/home-page-body/home-page-body.component.html
+++ b/src/app/home-page-body/home-page-body.component.html
@@ -1,6 +1,6 @@
 <div class="search-filtering">
   <div class="search-country">
-    <input class="form-control" type="text" name="search" [(ngModel)]="searchText" autocomplete="off"
+    <input class="form-control" type="text" name="search" [(ngModel)]="searchText"
       placeholder=" Search for a country..">
   </div>
   <div class="filter-region">
