--- a/src/app/home-page-body/home-page-body.component.html
+++ b/src/app/home-page-body/home-page-body.component.html
@@ -1,29 +1,32 @@
+<mat-spinner *ngIf="allCountryDetails.length == 0"></mat-spinner>
 <div class="search-filtering">
   <div class="search-country">
     <input class="form-control" type="text" name="search" [(ngModel)]="searchText"
       placeholder=" Search for a country..">
   </div>
   <div class="filter-region">
-    <select name="slct" id="slct" [(ngModel)]="searchText">
-      <option disabled='disabled' selected>Filter by Region</option>
-      <option value="Africa">Africa</option>
-      <option value="America">America</option>
-      <option value="Asia">Asia</option>
-      <option value="Europe">Europe</option>
-      <option value="Oceania">Oceania</option>
-    </select>
+    <mat-form-field style="background-color: white; padding: 0em;">
+      <mat-label>Filter by Region</mat-label>
+      <mat-select [(ngModel)]="filterText" name="car">
+        <!-- <md-option value="" selected></md-option> -->
+        <mat-option>None</mat-option>
+        <mat-option *ngFor="let car of foods" value="{{car.value}}">
+          {{car.viewValue}}
+        </mat-option>
+      </mat-select>
+    </mat-form-field>
   </div>
 </div>
 
 <div class="country-list-view">
-  <div routerLink="country/{{Country.alpha3Code}}" class="card"
-    *ngFor="let Country of allCountryDetails | filter : searchText ">
-    <img class="card-img" src={{Country.flag}} alt="Country Flag" />
-    <div class="card-body">
+  <mat-card class="card" routerLink="country/{{Country.alpha3Code}}"
+    *ngFor="let Country of allCountryDetails | filter : searchText | filter : filterText">
+    <img mat-card-image src={{Country.flag}} alt="Country Flag">
+    <mat-card-content>
       <a class="card-title">{{Country.name}}</a>
       <p class="population">Population : {{Country.population}} </p>
       <p class="region"> Region : {{Country.region}}</p>
       <p class="capital"> Capital : {{Country.capital}}</p>
-    </div>
-  </div>
+    </mat-card-content>
+  </mat-card>
 </div>
